--- a/index.html
+++ b/index.html
@@ -1,39 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <!-- ===== OPTIMIZED HEAD (Reflections index / cards) ===== -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- AdSense (load once only) -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9771423771078445"
+    crossorigin="anonymous"></script>
+
+  <!-- Title & SEO -->
   <title>Solitude Reflections — Ninox Antolihao</title>
-  <meta name="robots" content="index,follow" />
-  <meta name="description" content="Solitude Reflections by Ninox Antolihao — honest questions, realizations, and short reflections on faith, mind, meaning, and inner growth." />
+  <meta name="robots" content="index,follow">
+  <meta name="description" content="Solitude Reflections by Ninox Antolihao — honest questions, realizations, and short reflections on faith, mind, meaning, and inner growth.">
+  <meta name="author" content="Ninox Antolihao">
 
   <!-- Canonical (ONE only) -->
-  <link rel="canonical" href="https://stonegrillresto.net/reflections/" />
+  <link rel="canonical" href="https://stonegrillresto.net/reflections/">
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="Solitude Reflections — Ninox Antolihao" />
-  <meta property="og:description" content="Honest questions and realizations — reflections on faith, mind, meaning, and inner growth." />
-  <meta property="og:url" content="https://stonegrillresto.net/reflections/" />
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Solitude Reflections — Ninox Antolihao">
+  <meta name="twitter:description" content="Honest questions and realizations — reflections on faith, mind, meaning, and inner growth.">
+  <!-- IMPORTANT: replace this image with a REAL reflections banner that exists -->
+  <meta name="twitter:image" content="https://stonegrillresto.net/reflections/assets/og/reflections-1200x630.jpg">
 
-  <!-- IMPORTANT: use a REAL absolute image that exists -->
-  <meta property="og:image" content="https://stonegrillresto.net/reflections/assets/og/reflections-1200x630.jpg" />
-  <meta name="twitter:card" content="summary_large_image" />
+  <!-- Open Graph (single clean block only) -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://stonegrillresto.net/reflections/">
+  <meta property="og:title" content="Solitude Reflections — Ninox Antolihao">
+  <meta property="og:description" content="Honest questions and realizations — reflections on faith, mind, meaning, and inner growth.">
+  <!-- IMPORTANT: replace this image with a REAL reflections banner that exists -->
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/assets/og/reflections-1200x630.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="Solitude Reflections — cards index">
+  <meta property="og:site_name" content="Solitude Reflections">
+  <meta property="og:locale" content="en_PH">
 
+  <!-- Icons -->
   <link rel="icon" href="/reflections/assets/favicon.ico" />
 
-  <!-- Your CSS -->
-  <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15" />
+  <!-- Fonts (optional; keep if you use them on reflections page) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@300;400;500;700&family=Poppins:wght@300;400;500;600;700&family=Satisfy&display=swap" rel="stylesheet">
 
-  <!-- Service Worker (safe: only register on /reflections/ index) -->
+  <!-- CSS (use your reflections css — change path/version if different) -->
+  <link rel="preload" as="style" href="/reflections/assets/styles/reflections.css?v=15">
+  <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
+
+  <!-- Meta Pixel (optional; keep if you want tracking on reflections) -->
   <script>
-    if ('serviceWorker' in navigator && location.pathname === '/reflections/') {
-      navigator.serviceWorker.register('/reflections/sw.js').catch(()=>{});
-    }
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '643206718690040');
+  fbq('track', 'PageView');
   </script>
-</head>
+  <noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=643206718690040&ev=PageView&noscript=1"
+  /></noscript>
 
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TP4B4GTZY9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-TP4B4GTZY9');
+  </script>
+
+  <!-- ===== /OPTIMIZED HEAD ===== -->
+</head>
 
 <body class="index-page">
   <header id="header" class="header fixed-top">
