--- a/reflections/index.html
+++ b/reflections/index.html
@@ -1,30 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- ========== META & HEAD ========== -->
+  <!-- ========== META & HEAD (REFLECTIONS INDEX) ========== -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Solitude Reflections — Stone Grill</title>
-  <meta name="description" content="All reflections in one page — read or download.">
-  <link rel="icon" href="/reflections/assets/favicon.ico">
-  <link rel="canonical" href="https://stonegrillresto.net/reflections/">
-  <meta name="robots" content="index,follow">
-  <!-- Social preview (keep as-is) -->
-  <meta property="og:image" content="https://stonegrillresto.net/reflections/assets/logo.png">
-  <meta property="og:image:width" content="240">
-  <meta property="og:image:height" content="371">
-  <meta property="og:image:alt" content="A Journey from Duality to Oneness">
+
+  <title>Solitude Reflections — Ninox Antolihao</title>
+  <meta name="description" content="All reflections in one page — read, listen, and explore short reflections on faith, mind, meaning, and inner growth." />
+  <meta name="robots" content="index,follow" />
+
+  <link rel="icon" href="/reflections/assets/favicon.ico" />
+  <link rel="canonical" href="https://stonegrillresto.net/reflections/" />
+
+  <!-- Open Graph (for Facebook/Messenger preview) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Solitude Reflections — Ninox Antolihao" />
+  <meta property="og:description" content="All reflections in one page — read, listen, and explore short reflections on faith, mind, meaning, and inner growth." />
+  <meta property="og:url" content="https://stonegrillresto.net/reflections/" />
+
+  <!-- Social preview image (keep your existing image) -->
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/assets/logo.png" />
+  <meta property="og:image:width" content="240" />
+  <meta property="og:image:height" content="371" />
+  <meta property="og:image:alt" content="Solitude Reflections cover" />
+
+  <!-- Twitter preview -->
+  <meta name="twitter:card" content="summary_large_image" />
 
   <!-- Global assets -->
-  <link rel="stylesheet" href="/reflections/assets/reflections.css?v=20">
-  <!-- ✅ Your playlist/global-player CSS is here -->
-  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=22">
-
+  <link rel="stylesheet" href="/reflections/assets/reflections.css?v=20" />
+  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=22" />
   <script src="/reflections/assets/audio-system.js?v=14"></script>
-  <link rel="manifest" href="/reflections/manifest.json?v=3">
-  <link rel="apple-touch-icon" href="/reflections/icon-180.png">
-  <meta name="theme-color" content="#ff6b3d">
+
+  <!-- PWA -->
+  <link rel="manifest" href="/reflections/manifest.json?v=3" />
+  <link rel="apple-touch-icon" href="/reflections/icon-180.png" />
+  <meta name="theme-color" content="#ff6b3d" />
+
+  <!-- Service Worker (SAFE: register only on reflections index, not on /pages/*) -->
+  <script>
+    (function () {
+      if (!('serviceWorker' in navigator)) return;
+
+      // allow both /reflections/ and /reflections/index.html
+      var p = location.pathname;
+      var isRefIndex = (p === '/reflections/' || p === '/reflections/index.html');
+
+      if (!isRefIndex) return;
+
+      navigator.serviceWorker.register('/reflections/sw.js')
+        .catch(function(){});
+    })();
+  </script>
 </head>
+
 
 <body>
   <!-- HEADER -->
