--- a/index.html
+++ b/index.html
@@ -1,56 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- ===== OPTIMIZED HEAD (Reflections index / cards) ===== -->
+  <!-- ===== MAIN SITE HEAD (Stone Grill Restaurant) ===== -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- AdSense (load once only) -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9771423771078445"
+  <script async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9771423771078445"
     crossorigin="anonymous"></script>
 
   <!-- Title & SEO -->
-  <title>Solitude Reflections — Ninox Antolihao</title>
+  <title>Stone Grill Restaurant | Enjoyable and Relaxing Dining</title>
   <meta name="robots" content="index,follow">
-  <meta name="description" content="Solitude Reflections by Ninox Antolihao — honest questions, realizations, and short reflections on faith, mind, meaning, and inner growth.">
+  <meta name="description" content="Stone Grill Restaurant offers a unique dining experience in Leyte, Philippines. Enjoy sizzling plates, fresh seafood, and family-friendly meals in a relaxing ambiance.">
+  <meta name="keywords" content="Stone Grill Restaurant, Hilongos Leyte, Bato, sizzling food, seafood, boodle fight, Filipino food, family dining, restobar Leyte, grill restaurant">
   <meta name="author" content="Ninox Antolihao">
 
-  <!-- Canonical (ONE only) -->
-  <link rel="canonical" href="https://stonegrillresto.net/reflections/">
+  <!-- Canonical (MAIN SITE only) -->
+  <link rel="canonical" href="https://stonegrillresto.net/">
+
+  <!-- Open Graph (single clean block) -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://stonegrillresto.net/">
+  <meta property="og:title" content="Stone Grill Restaurant | Enjoyable and Relaxing Dining">
+  <meta property="og:description" content="Visit Stone Grill in Leyte for sizzling food, boodle sets, seafood trays, and a relaxing venue for celebrations.">
+  <meta property="og:image" content="https://stonegrillresto.net/assets/og/stonegrill-hero-1200x630.jpg">
+  <meta property="og:image:type" content="image/jpeg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="Stone Grill sizzling plates and seafood spread">
+  <meta property="og:site_name" content="Stone Grill Restaurant">
+  <meta property="og:locale" content="en_PH">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Solitude Reflections — Ninox Antolihao">
-  <meta name="twitter:description" content="Honest questions and realizations — reflections on faith, mind, meaning, and inner growth.">
-  <!-- IMPORTANT: replace this image with a REAL reflections banner that exists -->
-  <meta name="twitter:image" content="https://stonegrillresto.net/reflections/assets/og/reflections-1200x630.jpg">
+  <meta name="twitter:title" content="Stone Grill Restaurant | Enjoyable and Relaxing Dining">
+  <meta name="twitter:description" content="Sizzling plates, seafood boodle, and Filipino favorites.">
+  <meta name="twitter:image" content="https://stonegrillresto.net/assets/og/stonegrill-hero-1200x630.jpg">
 
-  <!-- Open Graph (single clean block only) -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://stonegrillresto.net/reflections/">
-  <meta property="og:title" content="Solitude Reflections — Ninox Antolihao">
-  <meta property="og:description" content="Honest questions and realizations — reflections on faith, mind, meaning, and inner growth.">
-  <!-- IMPORTANT: replace this image with a REAL reflections banner that exists -->
-  <meta property="og:image" content="https://stonegrillresto.net/reflections/assets/og/reflections-1200x630.jpg">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="630">
-  <meta property="og:image:alt" content="Solitude Reflections — cards index">
-  <meta property="og:site_name" content="Solitude Reflections">
-  <meta property="og:locale" content="en_PH">
+  <!-- Icons & PWA -->
+  <link rel="manifest" href="site.webmanifest">
+  <meta name="theme-color" content="#b22222">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="StoneGrill">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon180x180.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
+  <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
 
-  <!-- Icons -->
-  <link rel="icon" href="/reflections/assets/favicon.ico" />
-
-  <!-- Fonts (optional; keep if you use them on reflections page) -->
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@300;400;500;700&family=Poppins:wght@300;400;500;600;700&family=Satisfy&display=swap" rel="stylesheet">
 
-  <!-- CSS (use your reflections css — change path/version if different) -->
-  <link rel="preload" as="style" href="/reflections/assets/styles/reflections.css?v=15">
-  <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
+  <!-- Preload -->
+  <link rel="preload" as="style" href="assets/css/main.css">
+  <link rel="preload" as="image" href="https://stonegrillresto.net/assets/img/hero-carousel/IMG_0127.jpeg">
 
-  <!-- Meta Pixel (optional; keep if you want tracking on reflections) -->
+  <!-- CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="assets/css/main.css" rel="stylesheet">
+
+  <!-- Meta Pixel Code -->
   <script>
   !function(f,b,e,v,n,t,s)
   {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -64,8 +81,30 @@
   fbq('track', 'PageView');
   </script>
   <noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=643206718690040&ev=PageView&noscript=1"
+    src="https://www.facebook.com/tr?id=643206718690040&ev=PageView&noscript=1"
   /></noscript>
+  <!-- End Meta Pixel Code -->
+
+  <!-- JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Restaurant",
+    "name": "Stone Grill Restaurant",
+    "image": "https://stonegrillresto.net/assets/img/hero-carousel/IMG_0127.jpeg",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Bato",
+      "addressRegion": "Leyte",
+      "addressCountry": "PH"
+    },
+    "telephone": "+63-53-568-0539",
+    "url": "https://stonegrillresto.net",
+    "servesCuisine": "Filipino, Seafood, Grilled Food",
+    "priceRange": "₱₱",
+    "openingHours": "Mo-Su 10:00-21:00"
+  }
+  </script>
 
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-TP4B4GTZY9"></script>
@@ -75,9 +114,9 @@
     gtag('js', new Date());
     gtag('config', 'G-TP4B4GTZY9');
   </script>
-
-  <!-- ===== /OPTIMIZED HEAD ===== -->
+  <!-- ===== /MAIN SITE HEAD ===== -->
 </head>
+
 
 <body class="index-page">
   <header id="header" class="header fixed-top">
