--- a/reflections/pages/godevil/read.html
+++ b/reflections/pages/godevil/read.html
@@ -438,16 +438,13 @@
           <span class="pill">by <strong style="color:rgba(255,255,255,.92)">Ninox Antolihao</strong></span>
         </div>
 
-        <h1 class="title">The Good and Evil within Us</h1>
-        <p class="subtitle">unlocking the door from dogma to sovereignty.</p>
-
         <!-- Simple cover design placeholder (optional) -->
         <div class="cover" aria-label="Simple Cover Design">
           <div class="cover-inner">
             <div class="badge">Solitude Reflection</div>
             <div class="cover-title">The Good and Evil within Us</div>
             <div class="cover-author">Ninox Antolihao</div>
-            <div class="hint"> <strong>godevil.jpg</strong>unlocking the door from dogma to sovereignty</div>
+            <div class="hint"->Unlocking the door from dogma to sovereignty</div>
           </div>
         </div>
       </div>
