--- a/reflections/pages/godevil/read.html
+++ b/reflections/pages/godevil/read.html
@@ -696,9 +696,12 @@
     });
   })();
 </script>
-    <div class="footer">
-        <small>Enjoyable and Relaxing</small>
-        <small>Stone Grill • Reflections</small>
-      </div>
+   <div class="footer">
+  <small>
+    <a href="https://stonegrillresto.net/">Stone Grill</a> •
+    <a href="https://stonegrillresto.net/reflections/">Reflections Page</a> •
+    <a href="https://stonegrillresto.net/order/">Orders Page</a>
+  </small>
+</div>
 </body>
 </html>
