--- a/reflections/index.html
+++ b/reflections/index.html
@@ -1101,8 +1101,9 @@
 
  <!-- FOOTER -->
 <footer class="site-footer">
-  © 2025  © <a href="https://stonegrillresto.net/">Homepage</a> or 
-  <a href="tel:0535680539">Call 053 568 0539</a>
+  © 2025  © <a href="https://stonegrillresto.net/">HOMEPAGE</a> or 
+  <a href="https://stonegrillresto.net/reflections/">REFLECTIONS</a>
+    <a href="https://stonegrillresto.net/order/">Stone Grill's ORDER's PAGE</a>
 </footer>
 
 <!-- ===== PWA SW (keep ONE) ===== -->
