--- a/reflections/index.html
+++ b/reflections/index.html
@@ -1101,9 +1101,9 @@
 
  <!-- FOOTER -->
 <footer class="site-footer">
-  © 2025  © <a href="https://stonegrillresto.net/">HOMEPAGE</a> or 
-  <a href="https://stonegrillresto.net/reflections/">REFLECTIONS</a>
-    <a href="https://stonegrillresto.net/order/">Stone Grill's ORDER's PAGE</a>
+ <a href="https://stonegrillresto.net/">HOMEPAGE</a> © 
+  <a href="https://stonegrillresto.net/reflections/">REFLECTIONS</a> ©
+    <a href="https://stonegrillresto.net/order/">ORDER PAGE</a>
 </footer>
 
 <!-- ===== PWA SW (keep ONE) ===== -->
