--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -475,6 +475,13 @@
   </header>
 
   <main class="page-content">
+    <div class="site-links">
+  <a href="https://stonegrillresto.net/">HOMEPAGE</a>
+  <span class="sep">©</span>
+  <a href="https://stonegrillresto.net/reflections/">REFLECTIONS</a>
+  <span class="sep">©</span>
+  <a href="https://stonegrillresto.net/order/">ORDER PAGE</a>
+</div>
 
     <!-- Local subtitle -->
     <section style="max-width:800px;margin:0 auto 0.8rem auto;">
