--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -210,11 +210,11 @@
     }
 
     /* Main layout */
-    .page-content{
-      max-width:1100px;
-      margin:0 auto;
-      padding: 6.6rem 1rem 2rem;
-    }
+.page-content{
+  width: min(1400px, 94vw);
+  margin: 0 auto;
+  padding: 6.6rem 1rem 2rem;
+}
 
     /* Overlay (NOW clickable to close menu) */
     .nav-overlay{
