--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -211,7 +211,8 @@
 
     /* Main layout */
 .page-content{
-  width: min(1400px, 94vw);
+  width: 100%;
+  max-width: 1400px;   /* adjust: 1200, 1300, 1600 */
   margin: 0 auto;
   padding: 6.6rem 1rem 2rem;
 }
