--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -481,7 +481,7 @@
   <span class="sep">©</span>
   <a href="https://stonegrillresto.net/reflections/">REFLECTIONS</a>
   <span class="sep">©</span>
-  <a href="https://stonegrillresto.net/order/">ORDER PAGE</a>
+  <a href="https://stonegrillresto.net/order/">ORDER</a>
 </div>
 
     <!-- Local subtitle -->
