--- a/reflections/index.html
+++ b/reflections/index.html
@@ -412,9 +412,9 @@
             </button>
 
             <button class="track-link" type="button"
-                    data-src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3"
-                    data-title="The Madness of Faith">
-              ▶ The Madness of Faith
+                    data-src="/reflections/pages/the-god-we-created/thegodwecreate-podcast.mp3"
+                    data-title="Podcast">
+              ▶ Podcast
             </button>
           </div>
           <p class="meta">
