--- a/reflections/index.html
+++ b/reflections/index.html
@@ -777,9 +777,9 @@
               ▶ Labeled Sinner
             </button>
             <button class="track-link" type="button"
-                    data-src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3"
-                    data-title="The Paradox of God">
-              ▶ The Paradox of God
+                    data-src="/reflections/intro.mp3"
+                    data-title="reflection">
+              ▶ Reflection
             </button>
           </div>
           
