--- a/reflections/pages/the-god-we-created/read.html
+++ b/reflections/pages/the-god-we-created/read.html
@@ -469,7 +469,13 @@
 
     </div>
   </header>
-
+  <div class="site-links">
+  <a href="https://stonegrillresto.net/">HOMEPAGE</a>
+  <span class="sep">©</span>
+  <a href="https://stonegrillresto.net/reflections/">REFLECTIONS</a>
+  <span class="sep">©</span>
+  <a href="https://stonegrillresto.net/order/">ORDER</a>
+</div>
   <main>
 
 
