--- a/reflections/assets/ref-header.html
+++ b/reflections/assets/ref-header.html
@@ -1,4 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Reflections | The 1-Letter Bridge</title>
 <link rel="stylesheet" href="/reflections/assets/ref-header.css">
+<head>
+<body>
 <header class="ref-header">
   <div class="ref-header-inner">
 
@@ -67,3 +75,11 @@
 
   <div class="ref-menu-overlay"></div>
 </header>
+    <footer>
+        &copy; 2026 Reflections on Human Sovereignty
+    </footer>
+</div>
+
+</body>
+</html>
+
